<resources>
    <string name="app_name">GymTracker</string>
    <string name="prev_date_icon_sr">Previous date</string>
    <string name="next_date_icon_sr">Next date</string>
    <string name="today_sr">Today</string>
    <string name="loading_data_sr">Loading data…</string>
    <string name="create_workout_button_sr">Create workout</string>
    <string name="no_workout_data_sr">You haven\'t exercised today yet</string>
    <string name="card_options_button_sr">card options button</string>
    <string name="top_set_pair_sr">%1$.1f kg x %2$d</string>
    <string name="card_title_exercise_sr">Exercise</string>
    <string name="card_title_sets_sr">Sets</string>
    <string name="card_title_top_set_sr">Top Set</string>
    <string name="workout_screen_today_workout_sr">Today\'s Workout</string>
    <string name="workout_screen_today_statistics_sr">Today\'s statistics</string>
    <string name="total_reps_weight_card_reps_title_sr">Reps volume:</string>
    <string name="total_reps_weight_card_reps_volume_sr">%1$d reps</string>
    <string name="total_reps_weight_card_weight_title_sr">Weight volume:</string>
    <string name="total_reps_weight_card_weight_volume_sr">%1$.1f Kg</string>
    <string name="exercise_distribution_card_empty_data_sr">Empty Workout</string>
    <string name="card_edit_workout_button_sr">Edit Workout</string>
    <string name="workout_title_edit_sr">Edit workout title button</string>
    <string name="workout_title_edit_field_cd">Workout Title</string>
    <string name="dropdown_menu_delete_workout_sr">Delete Workout</string>
    <string name="add_exercise_button">+ Add Exercise</string>
    <string name="diary_screen_edit_name_clear_button_sr">Clear edit name</string>
    <string name="copy_workout_button_sr">copy workout</string>
    <string name="kg_sr">Kg</string>
    <string name="reps_sr">Reps</string>
    <string name="add_set_button_sr">Add Set</string>
    <string name="add_set_button_icon_cd">add set button icon</string>
    <string name="history_button_icon_cd">Exercise History</string>
    <string name="history_button_sr">History</string>
    <string name="exercise_dropdown_menu_sr">Exercise menu icon</string>
    <string name="back_button_cd">Back button</string>
    <string name="complete_exercise_set_button_cd">Complete set button</string>
    <string name="incomplete_exercise_set_button_cd">Incomplete set button</string>
    <string name="delete_exercise_set_button_cd">delete exercise set button</string>
    <string name="dropdown_menu_delete_exercise_sr">Delete exercise</string>
    <string name="workout_diary_reps_edit_text_cd">reps edit text</string>
    <string name="workout_diary_weight_edit_text_cd">weight edit text</string>
    <string name="workout_exercise_list_create_exercise_sr">Create Exercise</string>
    <string name="workout_exercise_list_clear_type_filter_sr">Clear</string>
    <string name="workout_exercise_list_clear_name_cd">Clear search name</string>
    <string name="workout_exercise_list_filter_button_cd">Filter button</string>
    <string name="workout_exercise_list_search_name_cd">Search name</string>
    <string name="workout_exercise_list_exercise_name_sr">Exercise Name</string>
    <string name="workout_exercise_list_exercise_type_sr">Exercise Type</string>
    <string name="workout_exercise_list_exercise_name_text_field_cd">Exercise name text field</string>
    <string name="workout_exercise_list_exercise_type_text_field_cd">Exercise type text field</string>
    <string name="workout_exercise_list_save_exercise_text_sr">Save Exercise</string>
    <string name="workout_exercise_list_cancel_exercise_creation_text_sr">Cancel</string>
    <string name="workout_exercise_list_drop_menu_button_cd">exercise list menu button</string>
    <string name="workout_exercise_list_scroll_top_button_cd">Scroll to top button</string>
    <string name="workout_exercise_list_add_exercises_button_sr">Add Exercises</string>
    <string name="workout_copy_series_number_sr">%1$d Series</string>
    <string name="copy_workout_copy_button_sr">Copy Workout</string>
    <string name="workout_exercise_List_title_sr">Exercises</string>
    <string name="workout_copy_title_sr">Copy Workout</string>
    <string name="workout_diary_plate_calculator_button_sr">Plate Calculator</string>
    <string name="workout_plate_calculator_title_sr">Plate calculator</string>
    <string name="workout_plate_calulator_target_weight_sr">Target Weight: </string>
    <string name="workout_plate_screen_error_text">Can\'t fit more bars</string>
    <string name="workout_diary_rest_timer_button_sr">Rest Timer</string>
    <string name="workout_diary_plate_calculator_button_icon_cd">Plate calculator icon</string>
    <string name="workout_diary_timer_button_icon_cd">Timer button icon</string>
    <string name="workout_plate_available_plates_sr">Available Plates:</string>
    <string name="workout_plate_available_bars_sr">Available Bars:</string>
    <string name="workout_plate_screen_no_plates_text">No need to put Plates with this weight</string>
    <string name="workout_plate_calulator_weight_edit_text_cd">weightEditTextsCd</string>
    <string name="workout_plate_calulator_plate_dialog_title">Insert Plate Weight:</string>
    <string name="workout_plate_calulator_dialog_weight_edit_text_cd">dialog weight cd</string>
    <string name="dismiss_sr">Dismiss</string>
    <string name="confirm_sr">Confirm</string>
    <string name="workout_plate_calulator_bar_dialog_title">Insert Bar Weight:</string>
    <string name="workout_plate_screen_add_plate_button_cd">add plate button</string>
    <string name="workout_plate_screen_add_bar_button_cd">Add bar button</string>
    <string name="rest_timer_channel_name">Rest Timer Channel</string>
    <string name="rest_timer_channel_description">Rest timer notifications</string>
    <string name="rest_timer_notification_title">Rest Timer</string>
    <string name="notification_rationale_title">Notification Permission</string>
    <string name="notification_rationale_body">In order to properly run the rest timer needs to show notifications</string>
    <string name="rest_timer_dialog_title">Rest Timer</string>
    <string name="rest_timer_dialog_close_button_sr">Close button</string>
    <string name="rest_timer_dialog_common_timers_title">Common Timers</string>
    <string name="rest_timer_dialog_time_input_sr">Rest Timer Input</string>
    <string name="rest_timer_dialog_increase_time_sr">Increase timer</string>
    <string name="rest_timer_dialog_decrease_time_sr">decrease timer</string>
    <string name="rest_timer_dialog_start_timer_sr">Start Timer</string>
    <string name="rest_timer_dialog_cancel_timer_sr">Cancel Timer</string>
    <string name="exercise_history_history_item_sets_title">Sets</string>
    <string name="exercise_history_history_item_completed_title">Completed</string>
    <string name="exercise_history_history_item_set_pair_sr">%1$.1f kg x %2$d reps</string>
    <string name="exercise_history_Tab_History_title">History</string>
    <string name="exercise_history_Tab_Charts_title">Charts</string>
    <string name="line_chart_no_data">No data available</string>
</resources>