package com.example.gymtracker.ui.model

enum class ExerciseType {
    Arms,
    Back,
    Chest,
    Core,
    Glutes,
    Legs,
    Shoulders,
    FullBody,
    Other
}