...
        workoutDate = LocalDate.now(),
        workoutDuration = 0,
        workoutCompleted = true,
        exercisesAndSets = persistentListOf(
            ExerciseAndSets(
                exerciseId = 1,
                exerciseName = "Squat",
                exerciseType = ExerciseType.Legs,
                sets = persistentListOf()
            ),
            ExerciseAndSets(
                exerciseId = 2,
                exerciseName = "BenchPress",
...
